--- a/foodApp_vanillaJavascript/index.html
+++ b/foodApp_vanillaJavascript/index.html
@@ -25,7 +25,7 @@
       <div class="row">
           <div class="col-md-12" style="padding: 0px;">
               <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
-                  <a class="navbar-brand" href="./index.html">  <img src="./images/app-logo.png" class="rounded-circle" alt="Cinque Terre" width="50" height="50"></a>
+                  <a class="navbar-brand" href="./index.html">  <img src="./images/app_logo.PNG" class="rounded-circle" alt="Cinque Terre" width="50" height="50"></a>
               </nav>
           </div>
         </div>
